--- a/app/src/main/resources/templates/friendship-invite.html
+++ b/app/src/main/resources/templates/friendship-invite.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Invite a Friend</title>
+    <link rel="stylesheet" th:href="@{/css/invite.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-5">
