--- a/app/src/main/resources/templates/bookmarks.html
+++ b/app/src/main/resources/templates/bookmarks.html
@@ -51,9 +51,25 @@
                     </a>
                     <!-- Followers/Following -->
                     <a href="/friendships/pending" class="flex items-center space-x-2">
-                        <p>Followers / Following</p>
+                        <p>Pending Friendship Invitations</p>
                         <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
+                        </svg>
+                    </a>
+
+                    <a href="/friendships/invite" class="flex items-center space-x-2">
+                        <p>Invite Friends</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2"  d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M19 8v4m-2-2h4"></path>
+                        </svg>
+                    </a>
+
+                    <a href="/friendships/friends" class="flex items-center space-x-2">
+                        <p>Friends</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8 12a3 3 0 1 0-6 0 3 3 0 0 0 6 0zM22 12a3 3 0 1 0-6 0 3 3 0 0 0 6 0zM2 20a6 6 0 0 1 12 0M10 20a6 6 0 0 1 12 0"></path>
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6a4 4 0 1 1-8 0 4 4 0 0 1 8 0z"></path>
                         </svg>
                     </a>
                     <a href="/posts">
@@ -73,9 +89,15 @@
                 </div>
                 <div class="func-block">
                     <a href="/posts/new">
-                        <p>Add Recipe</p>
+                        <p>Add Post</p>
                         <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
+                        </svg>
+                    </a>
+                    <a href="/challenges" class="flex items-center space-x-2">
+                        <p>Challenges</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8 4V2h8v2a4 4 0 0 1 4 4v2a4 4 0 0 1-4 4H8a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4zM6 14v2a6 6 0 0 0 12 0v-2"></path>
                         </svg>
                     </a>
                 </div>
